--- a/Views/LeaveRequests/Create.cshtml
+++ b/Views/LeaveRequests/Create.cshtml
@@ -28,9 +28,12 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="LeaveStatusId" class="control-label"></label>
+                <select asp-for="LeaveStatusId" class="form-control" asp-items="ViewBag.LeaveStatusId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="LeaveTypeId" class="control-label"></label>
+                <select asp-for="LeaveTypeId" class="form-control" asp-items="ViewBag.LeaveTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ApproverId" class="control-label"></label>
