--- a/Views/LeaveRequests/Index.cshtml
+++ b/Views/LeaveRequests/Index.cshtml
@@ -22,7 +22,10 @@
                 @Html.DisplayNameFor(model => model.EndDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Status)
+                @Html.DisplayNameFor(model => model.LeaveType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LeaveStatus)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ApproverId)
@@ -54,9 +57,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LeaveType.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LeaveStatus.Status)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ApproverId)
             </td>
