--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,9 @@ Author URL: http://w3layouts.com
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li><a class="dropdown-item" href="/LeaveRequests">Leave Request</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/LeaveRequests/Create">Leave Request</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item mr-2" title="Search">
