fixed staffmember and roles

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,11 +24,7 @@ Author URL: http://w3layouts.com
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
-                <h1>
-                    <a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
-                        Ko<span class="sublog">Deal.</span>
-                    </a>
-                </h1>
+              
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
@@ -43,6 +39,12 @@ Author URL: http://w3layouts.com
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/LeaveRequests/Create">Leave Request</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/StaffMembers/Index">Staff Members</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Teams/Index">Teams</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
