--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,11 @@ Author URL: http://w3layouts.com
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
-              
+                <!-- Skyhigh Global logo in Navbar -->
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="/images/SKYHIGH-removebg-preview.png" alt="Skyhigh Global Logo">
+                </a>
+
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
@@ -37,15 +41,22 @@ Author URL: http://w3layouts.com
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/LeaveRequests/Create">Leave Request</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/StaffMembers/Index">Staff Members</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Teams/Index">Teams</a>
-                        </li>
+
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/LeaveRequests/Create">Leave Request</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/StaffMembers/Index">Staff Members</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Teams/Index">Teams</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/AttendanceBonus/Index">Track AttendanceBonus</a>
+                            </li>
+                        }
                     </ul>
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item mr-2" title="Search">
