--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,6 +4,23 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
+<!-- breadcrumb -->
+<section class="w3l-about-breadcrumb">
+    <div class="breadcrumb-bg breadcrumb-bg-about py-5">
+        <div class="container py-lg-5 py-md-4">
+            <div class="w3breadcrumb-gids text-center pt-5">
+                <div class="w3breadcrumb-right">
+                    <ul class="breadcrumbs-custom-path">
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><span class="fas fa-angle-double-right mx-2"></span> @ViewData["Title"]</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--//breadcrumb-->
+<!--/services-->
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
