--- a/Views/EventCategories/Index.cshtml
+++ b/Views/EventCategories/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@model IEnumerable<SkyGlobal.Models.Roles>
+﻿@model IEnumerable<SkyGlobal.Models.EventCategorie>
 
 @{
     ViewData["Title"] = "Index";
 }
-
 <!-- breadcrumb -->
 <section class="w3l-about-breadcrumb">
     <div class="breadcrumb-bg breadcrumb-bg-about py-5">
@@ -12,7 +11,7 @@
                 <div class="w3breadcrumb-right">
                     <ul class="breadcrumbs-custom-path">
                         <li><a href="index.html" class="breadcrumb-link">Home</a></li>
-                        <li class="active"><span class="fas fa-angle-double-right mx-2"></span> User Roles</li>
+                        <li class="active"><span class="fas fa-angle-double-right mx-2"></span> Event Categorie</li>
                     </ul>
                 </div>
             </div>
@@ -21,7 +20,6 @@
 </section>
 <!--//breadcrumb-->
 
-
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -29,7 +27,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RoleName)
+                @Html.DisplayNameFor(model => model.EventCategorieName)
             </th>
             <th></th>
         </tr>
@@ -38,12 +36,12 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.RoleName)
+                @Html.DisplayFor(modelItem => item.EventCategorieName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RolesId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RolesId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RolesId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.EventCategorieId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.EventCategorieId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.EventCategorieId">Delete</a>
             </td>
         </tr>
 }
