--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,17 @@ Author URL: http://w3layouts.com
     <!--/google-fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!--//google-fonts -->
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <link href="~/temp/assets/css/style-starter.css" rel="stylesheet" />
@@ -34,7 +45,7 @@ Author URL: http://w3layouts.com
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-lg-auto my-2 my-lg-0 navbar-nav-scroll">
+                    <ul class="navbar-nav me-lg-auto my-2 my-lg-0 navbar-nav-scroll flex-column flex-lg-row">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -56,16 +67,30 @@ Author URL: http://w3layouts.com
                             <li class="nav-item">
                                 <a class="nav-link" href="/AttendanceBonus/Index">Track AttendanceBonus</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/WorkUpdates/Index">Work Updates</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/WorkUpdateTopics/Index">Work Updates Topics</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Events/Index">Events</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/EventCategories/Index">Events Categories</a>
+                            </li>
                         }
                     </ul>
+
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item mr-2" title="Search">
                             <a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span>
                             </a>
                         </li>
-                        <li class="nav-item mx-lg-4 phone-btn btn-white d-none d-lg-block btn-style ms-2"> <partial name="_LoginPartial" /> </li>
-                        
+                        <li class="nav-item mx-lg-4 phone-btn btn-white d-none d-lg-block btn-style ms-2">
+                            <partial name="_LoginPartial" />
+                        </li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -81,6 +106,31 @@ Author URL: http://w3layouts.com
                     </div>
                     <!-- /search popup -->
                 </div>
+
+                <!-- Optional CSS for additional styling -->
+                <style>
+                    /* Flexbox adjustments for navbar items */
+                    .navbar-nav {
+                        display: flex;
+                        flex-wrap: wrap; /* Allow the items to wrap into multiple lines */
+                        margin: 0;
+                    }
+
+                        .navbar-nav .nav-item {
+                            flex: 1 0 100%; /* Make each item take full width initially */
+                        }
+
+                    /* Adjust for larger screens to display items in a row */
+                    @@media (min-width: 992px) {
+                        .navbar-nav .nav-item
+
+                    {
+                        flex: 0 0 auto; /* Prevent wrapping and allow items to be in a row on large screens */
+                    }
+
+                    }
+                </style>
+
                 <!-- toggle switch for light and dark theme -->
                 <div class="mobile-position">
                     <nav class="navigation">
@@ -100,6 +150,7 @@ Author URL: http://w3layouts.com
         </div>
     </header>
     <!--//Header-->
+
     <body>
         @RenderBody()
     </body>
