Added breadcrumbs to JobApplications and Job Posting

--- a/Views/JobApplications/Apply.cshtml
+++ b/Views/JobApplications/Apply.cshtml
@@ -1,8 +1,28 @@
 ﻿@model SkyGlobal.Models.JobApplication
 
+
+
 @{
     ViewData["Title"] = "Apply for Job";
 }
+
+<!-- breadcrumb -->
+<section class="w3l-about-breadcrumb">
+    <div class="breadcrumb-bg breadcrumb-bg-about py-5">
+        <div class="container py-lg-5 py-md-4">
+            <div class="w3breadcrumb-gids text-center pt-5">
+                <div class="w3breadcrumb-right">
+                    <ul class="breadcrumbs-custom-path">
+                        <li><a href="index.html" class="breadcrumb-link">Home</a></li>
+                        <li class="active"><span class="fas fa-angle-double-right mx-2"></span> Apply for Job</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--//breadcrumb-->
+
 <div style="padding-top: 100px;">
 <h2>Apply for @ViewBag.JobTitle</h2>
 @if (ViewBag.JobTitle == null)
