--- a/Views/JobPostings/Details.cshtml
+++ b/Views/JobPostings/Details.cshtml
@@ -1,4 +1,21 @@
 ﻿@model SkyGlobal.Models.JobPosting
+
+<!-- breadcrumb -->
+<section class="w3l-about-breadcrumb">
+    <div class="breadcrumb-bg breadcrumb-bg-about py-5">
+        <div class="container py-lg-5 py-md-4">
+            <div class="w3breadcrumb-gids text-center pt-5">
+                <div class="w3breadcrumb-right">
+                    <ul class="breadcrumbs-custom-path">
+                        <li><a href="index.html" class="breadcrumb-link">Home</a></li>
+                        <li class="active"><span class="fas fa-angle-double-right mx-2"></span> Application Postings</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--//breadcrumb-->
 <div style="padding-top: 100px;">
 <h2 class="text-center mb-4">Job Posting Details</h2>
 
